tests/typing/fail/tuple_arg_fail.rb

z = [[1,2],[3,4]]
z.each {|(o, v)| o.blah}
